--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@
         font-size: 2.2rem;
         position: absolute;
         align-items: center;
+        justify-content: center;
         text-overflow: ellipsis;
     }
   
