--- a/style.css
+++ b/style.css
@@ -103,6 +103,7 @@
         color: var(--darkBlue);
         margin-left: 20px;
         font-size: 2.2rem;
+        top: 20px;
         position: absolute;
         align-items: center;
         justify-content: center;
