--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -121,6 +121,7 @@
         color: var(--darkBlue);
         margin-left: 20px;
         font-size: 2.2rem;
+        top: 10px;
         position: absolute;
         align-items: center;
         text-overflow: ellipsis;
