--- a/styleInfo.css
+++ b/styleInfo.css
@@ -364,6 +364,13 @@ html {
     }
   }
 
+  @media screen and (max-width: 480px) {   
+    .sponsorInfo-btn {
+        font-size: 1rem;
+        top: 350px;
+    }
+  }
+
   /* SPONSOR LEVELS */
   .levels {
     background-image: url("/images/TestFinalBlue.jpg");
