--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -270,6 +270,8 @@
     color: #ffff;
     cursor: pointer;
     top: 340px;
+    justify-content: center;
+    align-items: center;
     position: absolute;
     transition: all 0.35s;
     z-index: 2;
@@ -314,7 +316,7 @@
         z-index: 1;
         max-width: 1920px;
         border-top: none;
-        border-bottom: var(--forestGreen) 25px solid;
+        /* border-bottom: var(--forestGreen) 25px solid; */
         border-radius: 0 0 0% 0%;
         min-height: 91.5vh;
         position: relative;
