--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -221,7 +221,8 @@
     margin: 0 auto;
     background: var(--blue);
     background-size: 40%;
-    border-bottom: var(--forestGreen) 60px solid;
+    /* border-bottom: var(--forestGreen) 60px solid; */
+    border-bottom: var(--lightBlue) 15px solid;
     border-radius: 0 0 50% 50%;
     background-position: top left;
     background-repeat: no-repeat;
@@ -316,7 +317,7 @@
         z-index: 1;
         max-width: 1920px;
         border-top: none;
-        /* border-bottom: var(--forestGreen) 25px solid; */
+        border-bottom: var(--lightBlue) 10px solid;
         border-radius: 0 0 0% 0%;
         min-height: 91.5vh;
         position: relative;
