--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -222,7 +222,6 @@
     background: var(--blue);
     background-size: 40%;
     /* border-bottom: var(--forestGreen) 60px solid; */
-    border-bottom: var(--lightBlue) 15px solid;
     border-radius: 0 0 50% 50%;
     background-position: top left;
     background-repeat: no-repeat;
@@ -317,7 +316,7 @@
         z-index: 1;
         max-width: 1920px;
         border-top: none;
-        border-bottom: var(--lightBlue) 10px solid;
+        /* border-bottom: var(--lightBlue) 10px solid; */
         border-radius: 0 0 0% 0%;
         min-height: 91.5vh;
         position: relative;
@@ -503,6 +502,7 @@
 /* FOOTER CSS */
 .site-footer {
     height: 65px;
+    border-top: var(--lightBlue) solid 10px;
     background-color: var(--blue);
     display: flex;
 }
