--- a/style.css
+++ b/style.css
@@ -553,7 +553,7 @@
         
         #CavBotsHang {
             justify-content: center;
-            right: 22%;
+            right: 10px;
             width: 350px;
         }
     }
