--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 :root {
     --blue: #85A0DE;
     --lightBlue: #AEC0EA;
-    --forestGreen: #2e5e47;
-    --lightGreen: #43775f;
+    /* --gray: rgb(135, 134, 134); */
+    --gray: #2e5e47;
     --darkBlue: #0c0444;
     --white: #fff;
     --black: #000;
@@ -21,10 +21,10 @@
   
   .nav-container {
     width: 100%;
-    background-color: var(--blue);
+    background-color: var(--black);
     position: fixed;
     z-index: 4;
-    border-bottom: var(--darkBlue) solid 4px;
+    border-bottom: var(--gray) solid 4px;
   }
   
   .navbar {
@@ -38,9 +38,10 @@
   }
   
   #navbar-logo {
-      color: var(--darkBlue);
+      color: var(--blue);
       text-decoration: none;
       font-size: calc(2vw - .1rem);
+      font-weight: 900;
       justify-self: start;
       margin-left: 20px;
       cursor: pointer;
@@ -58,7 +59,7 @@
   }
   
   .nav-links {
-      color: var(--darkBlue);
+      color: var(--blue);
       font-size: 1.3rem;
       text-decoration: none;
   }
@@ -79,14 +80,14 @@
 @media screen and (max-width: 1020px) {
     .nav-container {
         position: fixed;
-        background-color: var(--blue);
+        background-color: var(--black);
         border-bottom: none;
     }
   
     .nav-menu {
         display: grid;
         grid-template-columns: auto;
-        background: var(--blue);
+        background: var(--black);
         margin: 0;
         width: 100%;
         height: 500px;
@@ -100,7 +101,7 @@
   
 
     #navbar-logo {
-        color: var(--darkBlue);
+        color: var(--blue);
         margin-left: 20px;
         font-size: 2.2rem;
         top: 10px;
@@ -111,15 +112,15 @@
     }
   
     .nav-menu.active {
-        background: var(--blue);
+        background: var(--black);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
     }
   
     .nav-links {
-        background-color: var(--blue);
-        color: var(--darkBlue);
+        background-color: var(--black);
+        color: var(--blue);
         text-align: center;
         line-height: 60px;
         width: 100%;
@@ -128,8 +129,8 @@
     }
   
     .nav-links:hover {
-        background-color: var(--darkBlue);
-        color: var(--blue);
+        background-color: var(--black);
+        color: var(--white);
         transition: all 0.4s ease;
     }
   
@@ -169,9 +170,7 @@
 
 /* HERO SECTION CSS */
 .main {
-    background-image: url("/images/TestFinalBlue.jpg");
-    background-repeat: repeat;
-    background-size: 20%;
+    background-color: var(--black);
     min-height: 90vh;
 }
 
@@ -180,9 +179,9 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    background: var(--blue);
-    background-size: 40%;
-    border-bottom: var(--forestGreen) 60px solid;
+    background-image: url("/images/CavBotsBlack.jpg");
+    background-size: 100%;
+    border-bottom: var(--gray) 60px solid;
     border-radius: 0 0 50% 50%;
     background-position: top left;
     background-repeat: no-repeat;
@@ -206,18 +205,21 @@
     /* CAVBOTS 7492 */
     font-family: 'sani Sans';
     font-style: normal;
-    font-weight: 700;
-    font-size: 7rem;
+    font-weight: 1000;
+    font-size: 10rem;
 
-    color: #FFFFFF;
+    color: var(--blue);
+    top: 70px;
+    position: absolute;
+    text-align: center;
     text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);
 }
 
 .main-btn {
     font-size: 1.3rem;
-    top: 20px;
+    top: 220px;
     font-weight: 700;
-    background-color: var(--darkBlue);
+    background-color: var(--blue);
     padding: 14px 32px;
     border: none;
     outline: none;
@@ -243,7 +245,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: #33684f;
+    background: var(--gray);
     transition: all 0.35s;
     border-radius: 4px;
 }
@@ -256,26 +258,30 @@
     width: 100%;
 }
 
-#CavBotsGen {
-    width: 390px;
-    height: 245px;
-    border-radius: 10px; 
-    border: 8px solid var(--darkBlue);
-    position: relative;
-    top: 60px;
-}
-
-@media screen and (max-width: 1020px) {
+@media screen and (max-width: 1020px) {    
+    .main {
+        background-color: var(--black);
+        min-height: 90vh;
+    }
+    
     .main-container {
-      margin: 0 auto;
-      background-image: url("/images/TestFinalBlue.jpg");
-      background-repeat: repeat;
-      background-size: 55%;
-      border-top: var(--lightBlue) 10px solid;
-      border-bottom: var(--lightBlue) 75px solid;
-      border-radius: 0;
-      min-height: 100vh;
-      top: 65px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 0 auto;
+        background-image: url("/images/CavBotsVer.jpg");
+        background-size: 100%;
+        border-bottom: var(--gray) 60px solid;
+        border-radius: 0 0 60% 60%;
+        background-position: top left;
+        background-repeat: no-repeat;
+        z-index: 1;
+        width: 100%;
+        max-width: 1920px;
+        padding: 0 50px;
+        /* top: 65px; */
+        min-height: 100vh;
+        position: relative;
     }
 
     .main-content {
@@ -287,80 +293,52 @@
     }
     
     .main-content h1 {
-        font-size: calc(12vw - .05rem);
+        font-size: calc(14vw - .05rem);
+        position: absolute;
+        top: -180px;
     }
 
     .main-btn {
-        top: 20px;
+        top: 220px;
         font-size: 1.5rem;
-        background-color: var(--lightBlue);
-    }
-
-    #CavBotsGen {
-        border: solid var(--lightBlue) 8px;
-        border-radius: 4px;
-        top: 60px;
-        aspect-ratio: 3.5/2;
+        background-color: var(--blue);
     }
 }
 
 @media screen and (max-width: 760px) {
     .main-content h1 {
         text-align: center;
-        font-size: 6rem;
+        font-size: calc(17vw - .05rem);
         width: 500px;
     }
 
     .main-btn {
-        top: 20px;
-        background-color: var(--lightBlue);
-    }
-
-    #CavBotsGen {
-        border: solid var(--lightBlue) 8px;
-        border-radius: 10px;
-        top: 40px;
-        aspect-ratio: 3.5/2;
+        top: 210px;
+        background-color: var(--blue);
     }
 }
 
 @media screen and (max-width: 480px) {
+    .main-container {
+        background-image: none;
+        border-bottom: var(--blue) 60px solid;
+    }
+    
     .main-content h1 {
+        text-align: center;
         font-size: 5rem;
-        width: 400px;
     }
     
     .main-btn {
-        top: 20px;
-        padding: 8px 26px;
-    }
-
-    #CavBotsGen {
-        top: 60px;
-        aspect-ratio: 1.7/1.2;
-    }
-}
-
-@media screen and (max-width: 360px) {
-    .main-content h1 {
-        font-size: 7vh;
-        width: 300px;
-    }
-
-    .main-btn {
-        font-size: 1rem;
-    }
-
-    #CavBotsGen {
-        width: 300px;
+        top: 10px;
+        position: absolute;
+        background-color: var(--blue);
     }
 }
 
 /* About Us Section CSS */
     .about {
-        background-image: url("/images/TestFinalBlue.jpg");
-        background-repeat: repeat;
-        background-size: 20%;
+        background-color: var(--black);
         z-index: 1;
         width: 100%;
         max-width: 1920px;
@@ -384,14 +362,14 @@
     }
 
     .about-container h1 {
-        color: var(--forestGreen);
+        color: var(--blue);
         z-index: 2;
         font-size: 5rem;
     }
 
     .about-container h2 {
         font-size: 2.5rem;
-        color: var(--blue);
+        color: var(--gray);
         z-index: 2;
     }
 
@@ -408,7 +386,7 @@
 
     .about-btn {
         font-size: 1.3rem;
-        background-color: var(--lightBlue);
+        background-color: var(--blue);
         padding: 14px 32px;
         border-radius: 8px;
         color: #fff;
@@ -436,7 +414,7 @@
         left: 0;
         width: 0;
         height: 100%;
-        background: #33684f;
+        background: var(--gray);
         transition: all 0.35s;
         border-radius: 4px;
     }
@@ -458,15 +436,13 @@
         width: 580px;
         height: 380px;
         z-index: 3;
-        border: 8px solid var(--lightBlue);
+        border: 8px solid var(--blue);
         border-radius: 8px;
     }
 
     @media screen and (max-width: 1020px) {
         .about {
-            background-image: url("/images/TestFinalBlue.jpg");
-            background-repeat: repeat;
-            background-size: 55%;
+            background-color: var(--black);
             z-index: 1;
             width: 100%;
             max-width: 1920px;
@@ -506,9 +482,7 @@
 
     @media screen and (max-width: 1020px) {
         .about {
-            background-image: url("/images/TestFinalBlue.jpg");
-            background-repeat: repeat;
-            background-size: 55%;
+            background: var(--black);
             z-index: 1;
             width: 100%;
             max-width: 1920px;
@@ -587,13 +561,13 @@
     }
 
     .contact-flow h2 {
-        color: var(--darkBlue);
+        color: var(--black);
         font-size: 60px;
         text-align: center;
     }
 
     .contact-flow h6 {
-        color: var(--darkBlue);
+        color: var(--black);
         font-size: 20px;
         text-align: center;
     }
@@ -604,23 +578,37 @@
     }
 
     .fa-brands {
-        color: var(--darkBlue);
+        color: var(--black);
         text-decoration: none;
         padding: 0.3em;
+        size: 10px;
+        font-size: 1.5em;
     }
 
     .fa-solid {
-        color: var(--darkBlue);
+        color: var(--black);
         text-decoration: none;
         padding: 0.3em;
+        font-size: 1.5em;
+    }
+
+    @media screen and (max-width: 1020px) {
+        .contact-container {
+            background: var(--blue);
+            z-index: 1;
+            width: 100%;
+            max-width: 1920px;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
     }
 
     /* FOOTER CSS */
     .site-footer {
         height: 65px;
-        background-image: url("/images/TestFinalBlue.jpg");
-        background-repeat: repeat;
-        background-size: 20%;
+        background-color: var(--black);
         display: flex;
     }
 
@@ -637,13 +625,20 @@
         flex-direction: column;
     }
 
-    .footer-container {
+    .footer-container p {
         text-align: center;
         color: var(--white);
     }
 
     @media screen and (max-width: 1020px) {
-    .site-footer {
-        background-size: 55%;
-      }
+        .footer-container {
+            background: var(--black);
+            z-index: 1;
+            width: 100%;
+            max-width: 1920px;
+            position: relative;
+            justify-content: center;
+            align-items: center;
+            flex-wrap: wrap;
+        }
     }
