--- a/styleInfo.css
+++ b/styleInfo.css
@@ -1,7 +1,7 @@
 :root {
   --blue: #85A0DE;
   --lightBlue: #AEC0EA;
-  --forestGreen: #2E5E47;
+  --gray: rgb(135, 134, 134);
   --darkBlue: #0c0444;
   --white: #fff;
   --black: #000;
@@ -20,10 +20,10 @@ html {
 
 .nav-container {
   width: 100%;
-  background-color: var(--blue);
+  background-color: var(--black);
   position: fixed;
   z-index: 4;
-  border-bottom: var(--darkBlue) solid 4px;
+  border-bottom: var(--gray) solid 4px;
 }
 
 .navbar {
@@ -37,14 +37,13 @@ html {
 }
 
 #navbar-logo {
-    color: var(--darkBlue);
+    color: var(--blue);
     text-decoration: none;
     font-size: calc(2vw - .1rem);
+    font-weight: 900;
     justify-self: start;
     margin-left: 20px;
     cursor: pointer;
-    align-items: center;
-    justify-content: center;
     text-overflow: ellipsis;
 }
 
@@ -59,7 +58,7 @@ html {
 }
 
 .nav-links {
-    color: var(--darkBlue);
+    color: var(--blue);
     font-size: 1.3rem;
     text-decoration: none;
 }
@@ -76,104 +75,102 @@ html {
   transition: all 0.3s ease-out;
   background: var(--white);
 }
-  
-  @media screen and (max-width: 1020px) {
-    .nav-container {
-        position: fixed;
-        background-color: var(--blue);
-    }
-  
-    .nav-menu {
-        display: grid;
-        grid-template-columns: auto;
-        background: var(--blue);
-        margin: 0;
-        width: 100%;
-        height: 500px;
-        position: absolute;
-        top: 65px;
-        left: -100%;
-        opacity: 0;
-        transition: all 0.5s ease;
-        z-index: 3;
-    }
-  
-    #navbar-logo {
-        color: var(--darkBlue);
-        margin-left: 20px;
-        font-size: 2.2rem;
-        top: 10px;
-        position: absolute;
-        align-items: center;
-        text-overflow: ellipsis;
-    }
-  
-    .nav-menu.active {
-        background: var(--blue);
-        left: 0;
-        opacity: 1;
-        transition: all 0.5s ease;
-    }
-  
-    .navbar {
-        width: 100%;
-    }
-  
-    .nav-links-btn {
-        border: none;
-        padding: 0;
-        border-radius: 4px;
-        padding: 8px 22px;
-        background-color: var(--darkBlue);
-        color: var(--blue);
-        transition: all 0.4s ease-out;
-        font-size: 1.3rem;
-    }
-  
-    .nav-links-btn:hover {
-        padding: 5px 15px; 
-        border-radius: 4px;
-        padding: 10px 28px;
-        background-color: var(--forestGreen);
-        color: var(--white);
-        transition: all 0.1s ease-in-out;
-    }
-  
-    #mobile-menu { 
-        position: absolute;
-        top: 20%;
-        right: 5%;
-        transform: translate(5%, 20%);
-        z-index: 2;
-    }
-  
-    .menu-toggle .bar {
-        display: block;
-        cursor: pointer;
-    }
-  
-    .menu-toggle:hover {
-        cursor: pointer;
-    }
-  
-    #mobile-menu.is-active .bar:nth-child(2) {
-        opacity: 0;
-    }
-  
-    #mobile-menu.is-active .bar:nth-child(1) {
-        transform: translateY(8px) rotate(45deg);
-    }
-  
-    #mobile-menu.is-active .bar:nth-child(3) {
-        transform: translateY(-8px) rotate(-45deg);
-    }
+
+@media screen and (max-width: 1020px) {
+  .nav-container {
+      position: fixed;
+      background-color: var(--black);
+      border-bottom: none;
   }
+
+  .nav-menu {
+      display: grid;
+      grid-template-columns: auto;
+      background: var(--black);
+      margin: 0;
+      width: 100%;
+      height: 500px;
+      position: absolute;
+      top: 65px;
+      left: -100%;
+      opacity: 0;
+      transition: all 0.5s ease;
+      z-index: 3;
+  }
+
+
+  #navbar-logo {
+      color: var(--blue);
+      margin-left: 20px;
+      font-size: 2.2rem;
+      top: 10px;
+      position: absolute;
+      align-items: center;
+      justify-content: center;
+      text-overflow: ellipsis;
+  }
+
+  .nav-menu.active {
+      background: var(--black);
+      left: 0;
+      opacity: 1;
+      transition: all 0.5s ease;
+  }
+
+  .nav-links {
+      background-color: var(--black);
+      color: var(--blue);
+      text-align: center;
+      line-height: 60px;
+      width: 100%;
+      display: table;
+      font-size: 1.3rem;
+  }
+
+  .nav-links:hover {
+      background-color: var(--black);
+      color: var(--white);
+      transition: all 0.4s ease;
+  }
+
+  .navbar {
+      width: 100%;
+  }
+
+  #mobile-menu { 
+      position: absolute;
+      top: 20%;
+      right: 5%;
+      transform: translate(5%, 20%);
+      z-index: 2;
+  }
+
+  .menu-toggle .bar {
+      display: block;
+      cursor: pointer;
+  }
+
+  .menu-toggle:hover {
+      cursor: pointer;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(2) {
+      opacity: 0;
+  }
+
+  #mobile-menu.is-active .bar:nth-child(1) {
+      transform: translateY(8px) rotate(45deg);
+  }
+
+  #mobile-menu.is-active .bar:nth-child(3) {
+      transform: translateY(-8px) rotate(-45deg);
+  }
+}
   
   /* SPONSOR INFO CSS */
   .sponsorInfo {
-      background-image: url("/images/TestFinalBlue.jpg");
-      background-repeat: repeat;
-      background-size: 20%;
+      background-color: var(--black);
+      min-height: 90vh;
       width: 100%;
       max-width: 1920px;
       min-height: 100vh;
@@ -184,9 +181,7 @@ html {
       align-items: center;
       justify-content: center;
       margin: 0 auto;
-      background: var(--blue);
-      background-size: 40%;
-      border-bottom: var(--forestGreen) 60px solid;
+      border-bottom: var(--gray) 60px solid;
       border-radius: 0 0 50% 50%;
       background-position: top left;
       background-repeat: no-repeat;
@@ -194,8 +189,8 @@ html {
       width: 100%;
       max-width: 1920px;
       padding: 0 50px;
-      top: 65px;
-      min-height: 91.5vh;
+      /* top: 65px; */
+      min-height: 100vh;
       position: relative;
   }
   
@@ -228,14 +223,14 @@ html {
 
   .sponsorInfo-btn {
     font-size: 1.3rem;
-    background-color: var(--darkBlue);
+    background-color: var(--blue);
     padding: 14px 32px;
     border: none;
     outline: none;
     border-radius: 15px;
     color: #ffff;
     cursor: pointer;
-    top: 460px;
+    top: 400px;
     position: absolute;
     transition: all 0.35s;
     z-index: 2;
@@ -255,7 +250,7 @@ html {
     left: 0;
     width: 0;
     height: 100%;
-    background: #33684f;
+    background: var(--gray);
     transition: all 0.35s;
     border-radius: 15px;
   }
@@ -269,27 +264,24 @@ html {
   }
   
   @media screen and (max-width: 1020px) {
+    .sponsorInfo {
+      background-color: var(--black);
+      min-height: 90vh;
+    }  
+    
     .sponsorInfo-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        background-image: url("/images/TestFinalBlue.jpg");
-        background-repeat: repeat;
-        background-size: 55%;
-        z-index: 1;
-        max-width: 1920px;
-        border-top: none;
-        border-bottom: var(--forestGreen) 90px solid;
-        border-radius: 0 0 0% 0%;
-        min-height: 100vh;
-        position: relative;
-        top: 65px;
+      z-index: 1;
+      width: 100%;
+      max-width: 1920px;
+      padding: 0 50px;
+      /* top: 65px; */
+      min-height: 100vh;
+      position: relative;
     } 
     
     .sponsorInfo-container h1 {
         font-size: 14vh;
-        top: 40px;
+        top: 100px;
         text-align: center;
         position: absolute;
     }
@@ -297,15 +289,14 @@ html {
     .sponsorInfo-container p {
         color: var(--white);
         font-size: 3vh;
-        top: 180px;
+        top: 210px;
         position: absolute;
     }
 
     .sponsorInfo-btn {
         font-size: 1.2rem;
         padding: 12px 28px;
-        background-color: var(--lightBlue);
-        top: 410px;
+        top: 370px;
     }
   }
 
@@ -318,7 +309,7 @@ html {
       width: 360px;
       height: 80px;
       border-style: solid;
-      top: 40px;
+      top: 100px;
       text-align: center;
       position: absolute;
     }
@@ -326,7 +317,7 @@ html {
     .sponsorInfo-container p {
       color: var(--white);
       font-size: 2.8vh;
-      top: 140px;
+      top: 200px;
       max-width: 350px;
       min-height: 100px;
       position: absolute;
@@ -337,7 +328,7 @@ html {
       font-size: 1rem;
       padding: 12px 14px;
       background-color: var(--lightBlue);
-      top: 450px;
+      top: 410px;
     }
   }
 
@@ -352,7 +343,7 @@ html {
     .sponsorInfo-container p {
         color: var(--white);
         font-size: 2.8vh;
-        top: 150px;
+        top: 200px;
         max-width: 340px;
         text-align: center;
         position: absolute;
@@ -360,7 +351,7 @@ html {
 
     .sponsorInfo-btn {
         font-size: 1rem;
-        top: 500px;
+        top: 410px;
     }
   }
 
@@ -373,17 +364,15 @@ html {
 
   /* SPONSOR LEVELS */
   .levels {
-    background-image: url("/images/TestFinalBlue.jpg");
-    background-repeat: repeat;
-    background-size: 20%;
-    z-index: 1;
-    width: 100%;
-    max-width: 1920px;
-    padding: 0 30px;
-    border-bottom: var(--lightBlue) 10px solid;
-    border-radius: 0 0 0% 0%;
-    min-height: 91.5vh;
-    position: relative;
+      background-color: var(--black);
+      z-index: 1;
+      width: 100%;
+      max-width: 1920px;
+      border-bottom: var(--lightBlue) 10px solid;
+      border-radius: 0 0 0% 0%;
+      min-height: 91.5vh;
+      position: relative;
+      flex-wrap: wrap;
   }
 
   .levels-container {
@@ -407,8 +396,8 @@ html {
     align-items: center;
     flex-direction: column;
     padding: 20px 30px;
-    border: 4px solid var(--lightBlue);
-    background-color: var(--darkBlue);
+    border: 5px solid var(--lightBlue);
+    background-color: var(--gray);
     position: relative;
     border-radius: 20px;
   }
