--- a/styleOutreach.css
+++ b/styleOutreach.css
@@ -1,7 +1,7 @@
 :root {
     --blue: #85A0DE;
     --lightBlue: #AEC0EA;
-    --forestGreen: #2E5E47;
+    --gray: rgb(135, 134, 134);
     --darkBlue: #0c0444;
     --white: #fff;
     --black: #000;
@@ -20,10 +20,10 @@
   
   .nav-container {
     width: 100%;
-    background-color: var(--blue);
+    background-color: var(--black);
     position: fixed;
     z-index: 4;
-    border-bottom: var(--darkBlue) solid 4px;
+    border-bottom: var(--gray) solid 4px;
   }
   
   .navbar {
@@ -37,14 +37,13 @@
   }
   
   #navbar-logo {
-      color: var(--darkBlue);
+      color: var(--blue);
       text-decoration: none;
       font-size: calc(2vw - .1rem);
+      font-weight: 900;
       justify-self: start;
       margin-left: 20px;
       cursor: pointer;
-      align-items: center;
-      justify-content: center;
       text-overflow: ellipsis;
   }
   
@@ -59,7 +58,7 @@
   }
   
   .nav-links {
-      color: var(--darkBlue);
+      color: var(--blue);
       font-size: 1.3rem;
       text-decoration: none;
   }
@@ -80,13 +79,14 @@
   @media screen and (max-width: 1020px) {
     .nav-container {
         position: fixed;
-        background-color: var(--blue);
+        background-color: var(--black);
+        border-bottom: none;
     }
   
     .nav-menu {
         display: grid;
         grid-template-columns: auto;
-        background: var(--blue);
+        background: var(--black);
         margin: 0;
         width: 100%;
         height: 500px;
@@ -98,26 +98,28 @@
         z-index: 3;
     }
   
+  
     #navbar-logo {
-        color: var(--darkBlue);
+        color: var(--blue);
         margin-left: 20px;
         font-size: 2.2rem;
         top: 10px;
         position: absolute;
         align-items: center;
+        justify-content: center;
         text-overflow: ellipsis;
     }
   
     .nav-menu.active {
-        background: var(--blue);
+        background: var(--black);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
     }
   
     .nav-links {
-        background-color: var(--blue);
-        color: var(--darkBlue);
+        background-color: var(--black);
+        color: var(--blue);
         text-align: center;
         line-height: 60px;
         width: 100%;
@@ -126,8 +128,8 @@
     }
   
     .nav-links:hover {
-        background-color: var(--darkBlue);
-        color: var(--blue);
+        background-color: var(--black);
+        color: var(--white);
         transition: all 0.4s ease;
     }
   
@@ -167,83 +169,77 @@
   
   /* OUTREACH CSS */
   .outreach {
-      background-image: url("/images/TestFinalBlue.jpg");
-      background-repeat: repeat;
-      background-size: 20%;
-      width: 100%;
-      max-width: 1920px;
-      min-height: 100vh;
+        background-color: var(--black);
+        min-height: 90vh;
+        width: 100%;
+        max-width: 1920px;
+        min-height: 100vh;
   }
   
   .outreach-container {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      margin: 0 auto;
-      background: var(--blue);
-      background-size: 40%;
-      border-bottom: var(--forestGreen) 60px solid;
-      border-radius: 0 0 50% 50%;
-      background-position: top left;
-      background-repeat: no-repeat;
-      z-index: 1;
-      width: 100%;
-      max-width: 1920px;
-      padding: 0 50px;
-      top: 65px;
-      min-height: 91.5vh;
-      position: relative;
-  }
-  
-  .outreach-container h1 {
-      font-family: 'sani Sans';
-      font-style: normal;
-      font-weight: 700;
-      font-size: 7rem;
-
-      color: #FFFFFF;
-      text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);  
-
-      top: 100px;
-      text-align: center;
-      position: absolute;
-  }
-
-  .outreach-container p {
-    color: var(--white);
-    font-size: 3vh;
-    border: solid transparent 1px;
-    top: 240px;
-    width: 620px;
-    align-items: center;
-    text-align: center;
-    justify-content: center;
-    border-style: solid;
-    position: absolute;
-}
-  
-  @media screen and (max-width: 1020px) {
-    .outreach-container {
         display: flex;
         align-items: center;
         justify-content: center;
         margin: 0 auto;
-        background-image: url("/images/TestFinalBlue.jpg");
-        background-repeat: repeat;
-        background-size: 55%;
+        border-bottom: var(--gray) 60px solid;
+        border-radius: 0 0 50% 50%;
+        background-position: top left;
+        background-repeat: no-repeat;
         z-index: 1;
+        width: 100%;
         max-width: 1920px;
-        border-top: none;
-        border-bottom: var(--forestGreen) 90px solid;
-        border-radius: 0 0 0% 0%;
+        padding: 0 50px;
+        /* top: 65px; */
         min-height: 100vh;
         position: relative;
-        top: 65px;
+  }
+  
+  .outreach-container h1 {
+        font-family: 'sani Sans';
+        font-style: normal;
+        font-weight: 700;
+        font-size: 7rem;
+
+        color: #FFFFFF;
+        text-shadow: 0px 8px 8px rgba(0, 0, 0, 0.25);  
+
+        top: 100px;
+        text-align: center;
+        position: absolute;
+  }
+
+  .outreach-container p {
+        color: var(--white);
+        font-size: 3vh;
+        border: solid transparent 1px;
+        top: 240px;
+        width: 620px;
+        align-items: center;
+        text-align: center;
+        justify-content: center;
+        border-style: solid;
+        position: absolute;
+}
+  
+  @media screen and (max-width: 1020px) {
+    .outreach {
+        background-color: var(--black);
+        min-height: 90vh;
+    }
+    
+    .outreach-container {
+        z-index: 1;
+        width: 100%;
+        max-width: 1920px;
+        padding: 0 50px;
+        /* top: 65px; */
+        min-height: 100vh;
+        position: relative;
     } 
     
     .outreach-container h1 {
         font-size: 14vh;
-        top: 40px;
+        top: 100px;
         text-align: center;
         position: absolute;
     }
@@ -251,7 +247,7 @@
     .outreach-container p {
         color: var(--white);
         font-size: 3vh;
-        top: 180px;
+        top: 200px;
         position: absolute;
     }
   }
@@ -265,7 +261,7 @@
         width: 260px;
         height: 80px;
         border-style: solid;
-        top: 40px;
+        top: 100px;
         text-align: center;
         position: absolute;
     }
@@ -273,7 +269,7 @@
     .outreach-container p {
       color: var(--white);
       font-size: 2.8vh;
-      top: 140px;
+      top: 200px;
       max-width: 350px;
       text-align: center;
       position: absolute;
@@ -282,9 +278,7 @@
 
 /* OUTREACH LIST */
 .outreachList {
-    background-image: url("/images/TestFinalBlue.jpg");
-    background-repeat: repeat;
-    background-size: 20%;
+    background-color: var(--black);
     z-index: 1;
     width: 100%;
     max-width: 1920px;
@@ -316,8 +310,8 @@
     align-items: center;
     flex-direction: column;
     padding: 20px 30px;
-    border: 4px solid var(--lightBlue);
-    background-color: var(--darkBlue);
+    border: 5px solid var(--lightBlue);
+    background-color: var(--gray);
     position: relative;
     border-radius: 20px;
 }
@@ -332,7 +326,7 @@
 }
 
 .list-content h1:hover {
-    color: var(--forestGreen);
+    color: var(--black);
 }
 
 .list-content p {
@@ -348,12 +342,6 @@
 }
 
 @media screen and (max-width: 1020px) {
-    .outreachList {
-        background-image: url("/images/TestFinalBlue.jpg");
-        background-repeat: repeat;
-        background-size: 55%;
-      }
-    
     .outreachList-item {
         width: 100%;
         padding-left: 25px;
@@ -372,7 +360,7 @@
       }
 
     .list-content {
-        background-color: var(--darkBlue);
+        background-color: var(--gray);
         max-width: 700px;
         border: 8px solid var(--lightBlue);
         border-radius: 20px;
