--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -1,7 +1,7 @@
 :root {
     --blue: #85A0DE;
     --lightBlue: #AEC0EA;
-    --forestGreen: #2E5E47;
+    --gray: rgb(135, 134, 134);
     --darkBlue: #0c0444;
     --white: #fff;
     --black: #000;
@@ -20,10 +20,10 @@
   
   .nav-container {
     width: 100%;
-    background-color: var(--blue);
+    background-color: var(--black);
     position: fixed;
     z-index: 4;
-    border-bottom: var(--darkBlue) solid 4px;
+    border-bottom: var(--gray) solid 4px;
   }
   
   .navbar {
@@ -37,14 +37,13 @@
   }
   
   #navbar-logo {
-      color: var(--darkBlue);
+      color: var(--blue);
       text-decoration: none;
       font-size: calc(2vw - .1rem);
+      font-weight: 900;
       justify-self: start;
       margin-left: 20px;
       cursor: pointer;
-      align-items: center;
-      justify-content: center;
       text-overflow: ellipsis;
   }
   
@@ -59,7 +58,7 @@
   }
   
   .nav-links {
-      color: var(--darkBlue);
+      color: var(--blue);
       font-size: 1.3rem;
       text-decoration: none;
   }
@@ -99,13 +98,14 @@
   @media screen and (max-width: 1020px) {
     .nav-container {
         position: fixed;
-        background-color: var(--blue);
+        background-color: var(--black);
+        border-bottom: none;
     }
   
     .nav-menu {
         display: grid;
         grid-template-columns: auto;
-        background: var(--blue);
+        background: var(--black);
         margin: 0;
         width: 100%;
         height: 500px;
@@ -117,26 +117,28 @@
         z-index: 3;
     }
   
+  
     #navbar-logo {
-        color: var(--darkBlue);
+        color: var(--blue);
         margin-left: 20px;
         font-size: 2.2rem;
         top: 10px;
         position: absolute;
         align-items: center;
+        justify-content: center;
         text-overflow: ellipsis;
     }
   
     .nav-menu.active {
-        background: var(--blue);
+        background: var(--black);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
     }
   
     .nav-links {
-        background-color: var(--blue);
-        color: var(--darkBlue);
+        background-color: var(--black);
+        color: var(--blue);
         text-align: center;
         line-height: 60px;
         width: 100%;
@@ -145,13 +147,9 @@
     }
   
     .nav-links:hover {
-        background-color: var(--darkBlue);
-        color: var(--blue);
+        background-color: var(--black);
+        color: var(--white);
         transition: all 0.4s ease;
-    }
-  
-    .navbar {
-        width: 100%;
     }
   
     /* .nav-links-btn {
@@ -206,9 +204,8 @@
   
   /* SPONSORS CSS */
   .sponsors {
-    background-image: url("/images/TestFinalBlue.jpg");
-    background-repeat: repeat;
-    background-size: 20%;
+    background-color: var(--black);
+    min-height: 90vh;
     width: 100%;
     max-width: 1920px;
     min-height: 100vh;
@@ -219,9 +216,7 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    background: var(--blue);
-    background-size: 40%;
-    border-bottom: var(--forestGreen) 60px solid;
+    border-bottom: var(--gray) 60px solid;
     border-radius: 0 0 50% 50%;
     background-position: top left;
     background-repeat: no-repeat;
@@ -229,8 +224,8 @@
     width: 100%;
     max-width: 1920px;
     padding: 0 50px;
-    top: 65px;
-    min-height: 91.5vh;
+    /* top: 65px; */
+    min-height: 100vh;
     position: relative;
   }
   
@@ -262,7 +257,7 @@
 
   .sponsor-btn {
     font-size: 1.3rem;
-    background-color: var(--darkBlue);
+    background-color: var(--blue);
     padding: 14px 32px;
     border: none;
     outline: none;
@@ -291,7 +286,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: #33684f;
+    background: var(--gray);
     transition: all 0.35s;
     border-radius: 15px;
   }
@@ -306,26 +301,17 @@
   
 @media screen and (max-width: 1020px) {
     .sponsors-container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        margin: 0 auto;
-        background-image: url("/images/TestFinalBlue.jpg");
-        background-repeat: repeat;
-        background-size: 55%;
         z-index: 1;
+        width: 100%;
         max-width: 1920px;
-        border-top: none;
-        border-bottom: var(--forestGreen) 30px solid;
-        border-radius: 0 0 0% 0%;
-        min-height: 92vh;
+        padding: 0 50px;
+        min-height: 100vh;
         position: relative;
-        top: 65px;
     } 
     
     .sponsors-container h1 {
         font-size: 14vh;
-        top: 40px;
+        top: 100px;
         text-align: center;
         position: absolute;
     }
@@ -333,15 +319,15 @@
     .sponsors-container p {
         color: var(--white);
         font-size: 3vh;
-        top: 180px;
+        top: 220px;
         position: absolute;
     }
 
     .sponsor-btn {
         font-size: 1.2rem;
         padding: 12px 28px;
-        background-color: var(--lightBlue);
-        top: 290px;
+        background-color: var(--blue);
+        top: 310px;
     }
   }
 
@@ -354,7 +340,7 @@
         width: 260px;
         height: 80px;
         border-style: solid;
-        top: 40px;
+        top: 100px;
         text-align: center;
         position: absolute;
     }
@@ -362,7 +348,7 @@
     .sponsors-container p {
         color: var(--white);
         font-size: 2.8vh;
-        top: 140px;
+        top: 200px;
         max-width: 350px;
         min-height: 100px;
         position: absolute;
@@ -379,7 +365,7 @@
 
   @media screen and (max-width: 480px) {    
     .sponsor-btn {
-        top: 290px;
+        top: 320px;
     }
   }
 
@@ -502,7 +488,7 @@
 /* FOOTER CSS */
 .site-footer {
     height: 75px;
-    border-top: var(--lightBlue) solid 15px;
+    border-top: var(--lightBlue) solid 10px;
     background-color: var(--blue);
     display: flex;
 }
