--- a/styleSponsors.css
+++ b/styleSponsors.css
@@ -1,7 +1,8 @@
 :root {
     --blue: #85A0DE;
     --lightBlue: #AEC0EA;
-    --gray: rgb(135, 134, 134);
+    /* --gray: rgb(135, 134, 134); */
+    --forestGreen: #2e5e47;
     --darkBlue: #0c0444;
     --white: #fff;
     --black: #000;
@@ -20,10 +21,10 @@
   
   .nav-container {
     width: 100%;
-    background-color: var(--black);
+    background-color: var(--blue);
     position: fixed;
     z-index: 4;
-    border-bottom: var(--gray) solid 4px;
+    border-bottom: var(--darkBlue) solid 4px;
   }
   
   .navbar {
@@ -37,7 +38,7 @@
   }
   
   #navbar-logo {
-      color: var(--blue);
+      color: var(--darkBlue);
       text-decoration: none;
       font-size: calc(2vw - .1rem);
       font-weight: 900;
@@ -58,7 +59,7 @@
   }
   
   .nav-links {
-      color: var(--blue);
+      color: var(--darkBlue);
       font-size: 1.3rem;
       text-decoration: none;
   }
@@ -94,18 +95,18 @@
     transition: all 0.3s ease-out;
     background: var(--white);
   }
-  
-  @media screen and (max-width: 1020px) {
+
+@media screen and (max-width: 1020px) {
     .nav-container {
         position: fixed;
-        background-color: var(--black);
+        background-color: var(--blue);
         border-bottom: none;
     }
   
     .nav-menu {
         display: grid;
         grid-template-columns: auto;
-        background: var(--black);
+        background: var(--blue);
         margin: 0;
         width: 100%;
         height: 500px;
@@ -117,9 +118,9 @@
         z-index: 3;
     }
   
-  
+
     #navbar-logo {
-        color: var(--blue);
+        color: var(--darkBlue);
         margin-left: 20px;
         font-size: 2.2rem;
         top: 10px;
@@ -130,15 +131,15 @@
     }
   
     .nav-menu.active {
-        background: var(--black);
+        background: var(--blue);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
     }
   
     .nav-links {
-        background-color: var(--black);
-        color: var(--blue);
+        background-color: var(--blue);
+        color: var(--darkBlue);
         text-align: center;
         line-height: 60px;
         width: 100%;
@@ -147,8 +148,8 @@
     }
   
     .nav-links:hover {
-        background-color: var(--black);
-        color: var(--white);
+        background-color: var(--blue);
+        color: var(--forestGreen);
         transition: all 0.4s ease;
     }
   
@@ -204,11 +205,10 @@
   
   /* SPONSORS CSS */
   .sponsors {
-    background-color: var(--black);
+    background-image: url("/images/TestFinalBlue.jpg");
+    background-size: 20%;
+    background-repeat: repeat;
     min-height: 90vh;
-    width: 100%;
-    max-width: 1920px;
-    min-height: 100vh;
   }
   
   .sponsors-container {
@@ -216,8 +216,9 @@
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    border-bottom: var(--gray) 60px solid;
+    background-color: var(--blue);
     border-radius: 0 0 50% 50%;
+    border-bottom: var(--forestGreen) 60px solid;
     background-position: top left;
     background-repeat: no-repeat;
     z-index: 1;
@@ -257,7 +258,7 @@
 
   .sponsor-btn {
     font-size: 1.3rem;
-    background-color: var(--blue);
+    background-color: var(--darkBlue);
     padding: 14px 32px;
     border: none;
     outline: none;
@@ -286,7 +287,7 @@
     left: 0;
     width: 0;
     height: 100%;
-    background: var(--gray);
+    background: var(--forestGreen);
     transition: all 0.35s;
     border-radius: 15px;
   }
@@ -300,6 +301,14 @@
   }
   
 @media screen and (max-width: 1020px) {
+    .sponsors {
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 40%;
+        background-repeat: repeat;
+        min-height: 90vh;
+        border-top: var(--darkBlue) solid 10px;
+    }
+
     .sponsors-container {
         z-index: 1;
         width: 100%;
@@ -326,16 +335,22 @@
     .sponsor-btn {
         font-size: 1.2rem;
         padding: 12px 28px;
-        background-color: var(--blue);
         top: 310px;
     }
   }
 
 @media screen and (max-width: 760px) {    
+    .sponsors {
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 55%;
+        background-repeat: repeat;
+        min-height: 90vh;
+    }
+    
     .sponsors-container h1 {
         color: var(--white);
         font-size: 3rem;
-        border: solid var(--lightBlue) 10px;
+        border: solid var(--darkBlue) 10px;
         border-radius: 30px;
         width: 260px;
         height: 80px;
@@ -358,7 +373,6 @@
         margin: auto 20px;
         font-size: 1rem;
         padding: 12px 14px;
-        background-color: var(--lightBlue);
         top: 330px;
     }
   }
