--- a/styleOutreach.css
+++ b/styleOutreach.css
@@ -1,7 +1,8 @@
 :root {
     --blue: #85A0DE;
     --lightBlue: #AEC0EA;
-    --gray: rgb(135, 134, 134);
+    /* --gray: rgb(135, 134, 134); */
+    --forestGreen: #2e5e47;
     --darkBlue: #0c0444;
     --white: #fff;
     --black: #000;
@@ -20,10 +21,10 @@
   
   .nav-container {
     width: 100%;
-    background-color: var(--black);
+    background-color: var(--blue);
     position: fixed;
     z-index: 4;
-    border-bottom: var(--gray) solid 4px;
+    border-bottom: var(--darkBlue) solid 4px;
   }
   
   .navbar {
@@ -37,7 +38,7 @@
   }
   
   #navbar-logo {
-      color: var(--blue);
+      color: var(--darkBlue);
       text-decoration: none;
       font-size: calc(2vw - .1rem);
       font-weight: 900;
@@ -58,7 +59,7 @@
   }
   
   .nav-links {
-      color: var(--blue);
+      color: var(--darkBlue);
       font-size: 1.3rem;
       text-decoration: none;
   }
@@ -75,18 +76,17 @@
     transition: all 0.3s ease-out;
     background: var(--white);
   }
-  
-  @media screen and (max-width: 1020px) {
+
+@media screen and (max-width: 1020px) {
     .nav-container {
         position: fixed;
-        background-color: var(--black);
-        border-bottom: none;
+        background-color: var(--blue);
     }
   
     .nav-menu {
         display: grid;
         grid-template-columns: auto;
-        background: var(--black);
+        background: var(--blue);
         margin: 0;
         width: 100%;
         height: 500px;
@@ -98,9 +98,9 @@
         z-index: 3;
     }
   
-  
+
     #navbar-logo {
-        color: var(--blue);
+        color: var(--darkBlue);
         margin-left: 20px;
         font-size: 2.2rem;
         top: 10px;
@@ -111,15 +111,15 @@
     }
   
     .nav-menu.active {
-        background: var(--black);
+        background: var(--blue);
         left: 0;
         opacity: 1;
         transition: all 0.5s ease;
     }
   
     .nav-links {
-        background-color: var(--black);
-        color: var(--blue);
+        background-color: var(--blue);
+        color: var(--darkBlue);
         text-align: center;
         line-height: 60px;
         width: 100%;
@@ -128,8 +128,8 @@
     }
   
     .nav-links:hover {
-        background-color: var(--black);
-        color: var(--white);
+        background-color: var(--blue);
+        color: var(--forestGreen);
         transition: all 0.4s ease;
     }
   
@@ -169,11 +169,10 @@
   
   /* OUTREACH CSS */
   .outreach {
-        background-color: var(--black);
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 20%;
+        background-repeat: repeat;
         min-height: 90vh;
-        width: 100%;
-        max-width: 1920px;
-        min-height: 100vh;
   }
   
   .outreach-container {
@@ -181,8 +180,9 @@
         align-items: center;
         justify-content: center;
         margin: 0 auto;
-        border-bottom: var(--gray) 60px solid;
+        background-color: var(--blue);
         border-radius: 0 0 50% 50%;
+        border-bottom: var(--forestGreen) 60px solid;
         background-position: top left;
         background-repeat: no-repeat;
         z-index: 1;
@@ -223,8 +223,11 @@
   
   @media screen and (max-width: 1020px) {
     .outreach {
-        background-color: var(--black);
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 40%;
+        background-repeat: repeat;
         min-height: 90vh;
+        border-top: var(--darkBlue) solid 10px;
     }
     
     .outreach-container {
@@ -253,6 +256,13 @@
   }
 
   @media screen and (max-width: 760px) {
+    .outreach {
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 55%;
+        background-repeat: repeat;
+        min-height: 90vh;
+    }
+    
     .outreach-container h1 {
         color: var(--white);
         font-size: 3rem;
@@ -278,7 +288,10 @@
 
 /* OUTREACH LIST */
 .outreachList {
-    background-color: var(--black);
+    background-image: url("/images/TestFinalBlue.jpg");
+    background-size: 20%;
+    background-repeat: repeat;
+    min-height: 90vh;
     z-index: 1;
     width: 100%;
     max-width: 1920px;
@@ -311,7 +324,7 @@
     flex-direction: column;
     padding: 20px 30px;
     border: 5px solid var(--lightBlue);
-    background-color: var(--gray);
+    background-color: var(--darkBlue);
     position: relative;
     border-radius: 20px;
 }
@@ -326,7 +339,7 @@
 }
 
 .list-content h1:hover {
-    color: var(--black);
+    color: var(--forestGreen);
 }
 
 .list-content p {
@@ -342,6 +355,12 @@
 }
 
 @media screen and (max-width: 1020px) {
+    .outreachList {
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 40%;
+        background-repeat: repeat;
+    }
+    
     .outreachList-item {
         width: 100%;
         padding-left: 25px;
@@ -360,7 +379,6 @@
       }
 
     .list-content {
-        background-color: var(--gray);
         max-width: 700px;
         border: 8px solid var(--lightBlue);
         border-radius: 20px;
@@ -373,6 +391,14 @@
 
     #OutreachPic {
         display: none;
+    }
+}
+
+@media screen and (max-width: 760px) {
+    .outreachList {
+        background-image: url("/images/TestFinalBlue.jpg");
+        background-size: 55%;
+        background-repeat: repeat;
     }
 }
 
