--- a/styleSeason.css
+++ b/styleSeason.css
@@ -1,7 +1,8 @@
 :root {
   --blue: #85A0DE;
   --lightBlue: #AEC0EA;
-  --gray: rgb(135, 134, 134);
+  /* --gray: rgb(135, 134, 134); */
+  --forestGreen: #2e5e47;
   --darkBlue: #0c0444;
   --white: #fff;
   --black: #000;
@@ -20,10 +21,10 @@ html {
 
 .nav-container {
   width: 100%;
-  background-color: var(--black);
+  background-color: var(--blue);
   position: fixed;
   z-index: 4;
-  border-bottom: var(--gray) solid 4px;
+  border-bottom: var(--darkBlue) solid 4px;
 }
 
 .navbar {
@@ -37,7 +38,7 @@ html {
 }
 
 #navbar-logo {
-    color: var(--blue);
+    color: var(--darkBlue);
     text-decoration: none;
     font-size: calc(2vw - .1rem);
     font-weight: 900;
@@ -58,7 +59,7 @@ html {
 }
 
 .nav-links {
-    color: var(--blue);
+    color: var(--darkBlue);
     font-size: 1.3rem;
     text-decoration: none;
 }
@@ -79,14 +80,14 @@ html {
 @media screen and (max-width: 1020px) {
   .nav-container {
       position: fixed;
-      background-color: var(--black);
+      background-color: var(--blue);
       border-bottom: none;
   }
 
   .nav-menu {
       display: grid;
       grid-template-columns: auto;
-      background: var(--black);
+      background: var(--blue);
       margin: 0;
       width: 100%;
       height: 500px;
@@ -100,7 +101,7 @@ html {
 
 
   #navbar-logo {
-      color: var(--blue);
+      color: var(--darkBlue);
       margin-left: 20px;
       font-size: 2.2rem;
       top: 10px;
@@ -111,15 +112,15 @@ html {
   }
 
   .nav-menu.active {
-      background: var(--black);
+      background: var(--blue);
       left: 0;
       opacity: 1;
       transition: all 0.5s ease;
   }
 
   .nav-links {
-      background-color: var(--black);
-      color: var(--blue);
+      background-color: var(--blue);
+      color: var(--darkBlue);
       text-align: center;
       line-height: 60px;
       width: 100%;
@@ -128,8 +129,8 @@ html {
   }
 
   .nav-links:hover {
-      background-color: var(--black);
-      color: var(--white);
+      background-color: var(--blue);
+      color: var(--forestGreen);
       transition: all 0.4s ease;
   }
 
@@ -169,11 +170,12 @@ html {
 
 /* SEASONS CSS */
 .seasons {
-    background-color: var(--black);
+    background-image: url("/images/TestFinalBlue.jpg");
+    background-size: 20%;
+    background-repeat: repeat;
     min-height: 90vh;
     width: 100%;
     max-width: 1920px;
-    min-height: 100vh;
 }
 
 .seasons-container {
@@ -181,8 +183,9 @@ html {
     align-items: center;
     justify-content: center;
     margin: 0 auto;
-    border-bottom: var(--gray) 60px solid;
+    background-color: var(--blue);
     border-radius: 0 0 50% 50%;
+    border-bottom: var(--forestGreen) 60px solid;
     background-position: top left;
     background-repeat: no-repeat;
     z-index: 1;
@@ -223,8 +226,11 @@ html {
 
 @media screen and (max-width: 1020px) {
   .seasons {
-      background-color: var(--black);
-      min-height: 90vh;
+    background-image: url("/images/TestFinalBlue.jpg");
+    background-size: 40%;
+    background-repeat: repeat;
+    min-height: 90vh;
+    border-top: var(--darkBlue) solid 10px;
   }
   
   .seasons-container {
@@ -253,10 +259,17 @@ html {
 }
 
 @media screen and (max-width: 760px) {
+  .seasons {  
+      background-image: url("/images/TestFinalBlue.jpg");
+      background-size: 55%;
+      background-repeat: repeat;
+      min-height: 90vh;
+  }
+  
   .seasons-container h1 {
       color: var(--white);
       font-size: 3rem;
-      border: solid var(--lightBlue) 10px;
+      border: solid var(--darkBlue) 10px;
       border-radius: 30px;
       width: 260px;
       height: 80px;
@@ -278,7 +291,10 @@ html {
 
 /* TIMELINE */
   .timeline {
-      background-color: var(--black);
+      background-image: url("/images/TestFinalBlue.jpg");
+      background-size: 20%;
+      background-repeat: repeat;
+      min-height: 90vh;
       z-index: 1;
       width: 100%;
       max-width: 1920px;
@@ -377,7 +393,7 @@ html {
       .timeline {
         background-image: url("/images/TestFinalBlue.jpg");
         background-repeat: repeat;
-        background-size: 55%;
+        background-size: 40%;
       }
 
       .timeline:after {
@@ -407,6 +423,13 @@ html {
   }
   
 @media screen and (max-width: 760px) {
+    .timeline {
+      background-image: url("/images/TestFinalBlue.jpg");
+      background-size: 55%;
+      background-repeat: repeat;
+      min-height: 90vh;
+    }
+  
     .timeline:after {
       left: 31px;
     }
